[package]
name = "aur-client-fork"
version = "0.1.5"
authors = ["Sam <sam.mackenzie@live.com>", "Jojii <jojii@gmx.net>"]
edition = "2018"
license="MIT"
keywords = ["aur", "arch"]
description="aur api rust client"
repository="https://github.com/JojiiOfficial/rust-arch"

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.123", features = ["derive"] }
lazy_static = "1.4.0"
